# duckdb

./: CMakeLists.txt  CMakeSettings.json  Makefile
.github/config/: uncovered_files.csv
.github/workflows/: LinuxRelease.yml  NodeJS.yml  Python.yml  Regression.yml  SwiftRelease.yml
benchmark/: benchmark_runner.cpp
data/parquet-testing/: pyarrow-generate-parquet.py
extension/httpfs/: CMakeLists.txt  create_secret_functions.cpp  http_functions.cpp  httpfs-extension.cpp  httpfs.cpp  s3fs.cpp
extension/json/: CMakeLists.txt
extension/parquet/: parquet-extension.cpp  parquet_extension.cpp  parquet_reader.cpp
extension/sqlsmith/: fuzzyduck.cpp
scripts/: amalgamation.py  arrow_copy_costs.py  arrow_streaming.py  format.py  node_build.sh  package_build.py  python_helpers.py  regression_check.py  regression_test_python.py  regression_test_python_result_collector.py  run_tests_one_by_one.py
src/catalog/: CMakeLists.txt  catalog_search_path.cpp  catalog_set.cpp  dependency.cpp  dependency_list.cpp  dependency_manager.cpp  duck_catalog.cpp
src/common/: CMakeLists.txt  allocator.cpp  enum_util.cpp  extra_type_info.cpp  file_system.cpp  multi_file_reader.cpp  re2_regex.cpp  symbols.cpp  thread.cpp  types.cpp
src/execution/: aggregate_hashtable.cpp  base_aggregate_hashtable.cpp  join_hashtable.cpp  physical_operator.cpp  radix_partitioned_hashtable.cpp
src/function/: function.cpp  function_binder.cpp
src/include/: duckdb.h
src/main/: chunk_scan_state.cpp  client_context.cpp  client_data.cpp  (+9 more)
tools/pythonpkg/src/spark/session/: CMakeLists.txt  builder.cpp
(+1023 files in other folders)
